2010-03-24  gettextize  <bug-gnu-gettext@gnu.org>

	* Makefile.am (SUBDIRS): Add intl.
	* configure.in (AC_CONFIG_FILES): Add intl/Makefile.

2010-03-24  gettextize  <bug-gnu-gettext@gnu.org>

	* Makefile.am (SUBDIRS): Add po.
	* configure.in (AC_CONFIG_FILES): Add po/Makefile.in.

2010-03-24  gettextize  <bug-gnu-gettext@gnu.org>

	* Makefile.am (SUBDIRS): Add po.
	(EXTRA_DIST): Add build-aux/config.rpath, m4/ChangeLog.
	* configure.in (AC_CONFIG_FILES): Add po/Makefile.in.

2010-03-24  gettextize  <bug-gnu-gettext@gnu.org>

	* m4/gettext.m4: Upgrade to gettext-0.17.
	* m4/iconv.m4: Upgrade to gettext-0.17.
	* m4/lib-ld.m4: Upgrade to gettext-0.17.
	* m4/lib-link.m4: Upgrade to gettext-0.17.
	* m4/lib-prefix.m4: Upgrade to gettext-0.17.
	* m4/nls.m4: Upgrade to gettext-0.17.
	* m4/po.m4: Upgrade to gettext-0.17.
	* m4/progtest.m4: Upgrade to gettext-0.17.
	* configure.in (AM_GNU_GETTEXT_VERSION): Bump to 0.17.

2006-08-17  Werner Koch  <wk@g10code.com>

	* THANKS: Merged with the 1.4 one.

2006-08-16  Werner Koch  <wk@g10code.com>

	* configure.ac: Removed test for capabilities and mlock.

2006-08-15  Werner Koch  <wk@g10code.com>

	* Makefile.am (keyserver): Enable building of keyserver helpers.

	* configure.ac: Merged with the current configure from 1.4.5.
	Require libgpg-error 1.2 and libksba 0.9.16.

2006-07-29  Marcus Brinkmann  <marcus@g10code.de>

	* README: Spelling fixes.

2006-07-27  Werner Koch  <wk@g10code.com>

	Released 1.9.22.

	* configure.ac: Call AB_INIT.

2006-07-03  Werner Koch  <wk@g10code.com>

	* configure.ac: Test for ksba_dn_teststr. 

2006-06-30  Werner Koch  <wk@g10code.com>

	* keyserver/: New.  Taken from 1.4.4
	* Makefile.am (SUBDIRS): Include keyserver/.
	* configure.ac: Include keyserver/.
	(FAKE_CURL, GPGKEYS_CURL): New.
	
2006-06-20  Werner Koch  <wk@g10code.com>

	Released 1.9.21.

2006-06-08  Marcus Brinkmann  <marcus@g10code.de>

	* configure.ac (PTH_LIBS): Add --all to pth-config invocation.
