@@ -1,3 +1,5 @@
 pcre do autoconf
 binutils-dev doautoconf
 
+autoconf-archive
+flex
