@@ -37,7 +37,7 @@ AC_PROG_LIBTOOL
 AC_PROG_INSTALL
 
 AM_GNU_GETTEXT([external])
-AM_GNU_GETTEXT_VERSION(0.15)
+AM_GNU_GETTEXT_VERSION([0.17])
 AM_ICONV
 
 PKG_PROG_PKG_CONFIG
